Fixed portfolio-item spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -638,6 +638,7 @@ navbar > .container .navbar-brand,
 }
 
 .slideBottom {
+    margin: 0 auto;
     max-width: 400px;
 }
 
